--- a/test-output/old/TestCases/methods.html
+++ b/test-output/old/TestCases/methods.html
@@ -1,28 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestCases</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:29:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:30:02</td>   <td>10330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">fbLogin</td> 
-  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:30:15</td>   <td>24010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionExcel.afTime()[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:30:16</td>   <td>25055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:30:25</td>   <td>33733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">fbLogin</td> 
-  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:30:39</td>   <td>48027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionExcel.afTime()[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:30:40</td>   <td>49186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:30:50</td>   <td>58361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">fbLogin</td> 
-  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:31:03</td>   <td>72010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionExcel.afTime()[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:31:04</td>   <td>73091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:31:15</td>   <td>84302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">fbLogin</td> 
-  <td>main@237351678</td>   <td></td> </tr>
-<tr bgcolor="69b8da">  <td>19/12/04 15:31:29</td>   <td>97793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionExcel.afTime()[pri:0, instance:com.test.LoginFunctionExcel@d2cc05a]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>main@237351678</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:09</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginFunctionDP.browser(java.lang.String)[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">&gt;&gt;browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2128059132</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:09</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginFunctionDP.browser(java.lang.String)[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">&gt;&gt;browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1453915788</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:13</td>   <td>3456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionDP.bfTIme()[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">&gt;&gt;bfTIme</td> 
+<td>&nbsp;</td>  <td>TestNG@2128059132</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:14</td>   <td>4372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionDP.bfTIme()[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">&gt;&gt;bfTIme</td> 
+<td>&nbsp;</td>  <td>TestNG@1453915788</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:16</td>   <td>6712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionDP.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">fbLogin</td> 
+  <td>TestNG@2128059132</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:20</td>   <td>10589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionDP.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">fbLogin</td> 
+  <td>TestNG@1453915788</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:46</td>   <td>36306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionDP.afTime()[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">&lt;&lt;afTime</td> 
+<td>&nbsp;</td>  <td>TestNG@1453915788</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:46</td>   <td>36414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionDP.afTime()[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">&lt;&lt;afTime</td> 
+<td>&nbsp;</td>  <td>TestNG@2128059132</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:47</td>   <td>37421</td> <td>&nbsp;</td><td title="&lt;&lt;LoginFunctionDP.afterTest()[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1453915788</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:47</td>   <td>37423</td> <td>&nbsp;</td><td title="&lt;&lt;LoginFunctionDP.afterTest()[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2128059132</td>   <td></td> </tr>
 </table>
