--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7c74e5">  <td>19/12/04 21:30:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SelectDropDown.dropDown()[pri:0, instance:com.test.SelectDropDown@56f4468b]">dropDown</td> 
-  <td>main@1967892594</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>0</td> <td title="&gt;&gt;TestNGHierarchy.beforeSuite()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>16</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGHierarchy.beforeTest()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGHierarchy.beforeClass()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGHierarchy.beforeMethod()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGHierarchy.Test1()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">Test1</td> 
+  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGHierarchy.afterMethod()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGHierarchy.beforeMethod()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGHierarchy.Test2()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">Test2</td> 
+  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGHierarchy.afterMethod()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>50</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGHierarchy.afterClass()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>56</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGHierarchy.afterTest()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/09 11:24:55</td>   <td>108</td> <td title="&lt;&lt;TestNGHierarchy.afterSuite()[pri:0, instance:InterviewQuestions.TestNGHierarchy@51efea79]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1047503754</td>   <td></td> </tr>
 </table>
