--- a/test-output/old/TestCases/methods.html
+++ b/test-output/old/TestCases/methods.html
@@ -1,24 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestCases</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:09</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginFunctionDP.browser(java.lang.String)[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">&gt;&gt;browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2128059132</td>   <td></td> </tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:09</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginFunctionDP.browser(java.lang.String)[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">&gt;&gt;browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1453915788</td>   <td></td> </tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:13</td>   <td>3456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionDP.bfTIme()[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>TestNG@2128059132</td>   <td></td> </tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:14</td>   <td>4372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionDP.bfTIme()[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>TestNG@1453915788</td>   <td></td> </tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:16</td>   <td>6712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionDP.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">fbLogin</td> 
-  <td>TestNG@2128059132</td>   <td></td> </tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:20</td>   <td>10589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionDP.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">fbLogin</td> 
-  <td>TestNG@1453915788</td>   <td></td> </tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:46</td>   <td>36306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionDP.afTime()[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>TestNG@1453915788</td>   <td></td> </tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:46</td>   <td>36414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionDP.afTime()[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>TestNG@2128059132</td>   <td></td> </tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:47</td>   <td>37421</td> <td>&nbsp;</td><td title="&lt;&lt;LoginFunctionDP.afterTest()[pri:0, instance:com.test.LoginFunctionDP@7dc7cbad]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1453915788</td>   <td></td> </tr>
-<tr bgcolor="9fcdbd">  <td>19/12/04 21:34:47</td>   <td>37423</td> <td>&nbsp;</td><td title="&lt;&lt;LoginFunctionDP.afterTest()[pri:0, instance:com.test.LoginFunctionDP@4501b7af]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2128059132</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/09 18:53:41</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.browser(java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@2a5ca609]">&gt;&gt;browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@395629617</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/09 18:53:45</td>   <td>4149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@2a5ca609]">&gt;&gt;bfTIme</td> 
+<td>&nbsp;</td>  <td>main@395629617</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/09 18:53:51</td>   <td>9868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@2a5ca609]">fbLogin</td> 
+  <td>main@395629617</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/09 18:54:05</td>   <td>24258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionExcel.afTime()[pri:0, instance:com.test.LoginFunctionExcel@2a5ca609]">&lt;&lt;afTime</td> 
+<td>&nbsp;</td>  <td>main@395629617</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/09 18:54:06</td>   <td>25573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@2a5ca609]">&gt;&gt;bfTIme</td> 
+<td>&nbsp;</td>  <td>main@395629617</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/09 18:54:06</td>   <td>25591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@2a5ca609]">fbLogin</td> 
+  <td>main@395629617</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/09 18:54:07</td>   <td>25627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@2a5ca609]">fbLogin</td> 
+  <td>main@395629617</td>   <td></td> </tr>
+<tr bgcolor="9fcdbd">  <td>19/12/09 18:54:07</td>   <td>25643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@2a5ca609]">fbLogin</td> 
+  <td>main@395629617</td>   <td></td> </tr>
 </table>
