--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:43:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:43:14</td>   <td>10525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">fbLogin</td> 
-  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:43:28</td>   <td>23962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionExcel.afTime()[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:43:30</td>   <td>26397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:43:40</td>   <td>35758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">fbLogin</td> 
-  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:43:54</td>   <td>50363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionExcel.afTime()[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:43:57</td>   <td>52836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:44:05</td>   <td>61256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">fbLogin</td> 
-  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:44:19</td>   <td>74818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionExcel.afTime()[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:44:21</td>   <td>77262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginFunctionExcel.bfTIme()[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">&gt;&gt;bfTIme</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:44:27</td>   <td>83148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionExcel.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">fbLogin</td> 
-  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="7c74e5">  <td>19/12/09 19:44:32</td>   <td>87915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginFunctionExcel.afTime()[pri:0, instance:com.test.LoginFunctionExcel@1753acfe]">&lt;&lt;afTime</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/10 10:52:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;StatMethods.bfClass()[pri:0, instance:InterviewQuestions.StatMethods@643b1d11]">&gt;&gt;bfClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1620303253</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/10 10:52:24</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;StatMethods.bfMethod()[pri:0, instance:InterviewQuestions.StatMethods@643b1d11]">&gt;&gt;bfMethod</td> 
+<td>&nbsp;</td>  <td>main@1620303253</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/10 10:52:24</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StatMethods.test1()[pri:0, instance:InterviewQuestions.StatMethods@643b1d11]">test1</td> 
+  <td>main@1620303253</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/10 10:52:24</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;StatMethods.afMethod()[pri:0, instance:InterviewQuestions.StatMethods@643b1d11]">&lt;&lt;afMethod</td> 
+<td>&nbsp;</td>  <td>main@1620303253</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/10 10:52:24</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;StatMethods.bfMethod()[pri:0, instance:InterviewQuestions.StatMethods@643b1d11]">&gt;&gt;bfMethod</td> 
+<td>&nbsp;</td>  <td>main@1620303253</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/10 10:52:24</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StatMethods.test2()[pri:0, instance:InterviewQuestions.StatMethods@643b1d11]">test2</td> 
+  <td>main@1620303253</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/10 10:52:24</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;StatMethods.afMethod()[pri:0, instance:InterviewQuestions.StatMethods@643b1d11]">&lt;&lt;afMethod</td> 
+<td>&nbsp;</td>  <td>main@1620303253</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/12/10 10:52:24</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;StatMethods.afClass()[pri:0, instance:InterviewQuestions.StatMethods@643b1d11]">&lt;&lt;afClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1620303253</td>   <td></td> </tr>
 </table>
